fix(style): fix empty icon too small bug of sidebar (fix #121)

--- a/src/scss/_partial/_sidebar/_sidebar-tags.scss
+++ b/src/scss/_partial/_sidebar/_sidebar-tags.scss
@@ -51,12 +51,12 @@
 
 .sidebar-tags-empty-active,
 .sidebar-categories-empty-active {
+    display: block;
+    font-size: 6rem !important; // TODO: why does it need !important
     margin-top: 7rem;
     user-select: none;
     text-align: center;
-    display: block;
     color: #fff;
-    font-size: 6rem;
 }
 
 
